<resources>
    <string name="app_name">Popular Movies Stage 1</string>

    <string name="popular">Sort by popularity</string>
    <string name="most_rated">Sort by most rated</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_name">Name</string>
    <string name="plot">Plot synopsis</string>
    <string name="rating">User rating</string>
    <string name="release">Release date</string>
    <string name="image_desc">This image view contains the poster of the film</string>
    <string name="error_message">An error has occurred.</string>

</resources>
